--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          user: Primice
           packages-dir: dist/
 
       # 使用shell脚本来找到第一个.tar.gz文件并提取版本号  
