--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,9 +36,8 @@ jobs:
       - name: pypi-publish
         uses: pypa/gh-action-pypi-publish@v1.9.0    
         with:
-          username: __token__
           password: ${{ secrets.PYPI_TOKEN }}
-          user: Primice
+          user: __token__
           packages-dir: dist/
           repository-url: https://test.pypi.org/legacy/
           skip-existing: true
