--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,7 +17,7 @@ jobs:
     name: Upload release to PyPI
     runs-on: ubuntu-latest
     environment:
-      name: pypi
+      name: pull_request
       url: https://pypi.org/p/crypto-js-to-py
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
