--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,7 +15,7 @@ jobs:
   publish-pypi:
         name: upload release to PyPI
         runs-on: ubuntu-latest
-        environment: release
+        environment: pull_request
         permissions:  
           id-token: write
         steps:
