--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,6 +30,8 @@ jobs:
            - name: Publish package distributions to PyPI
              uses: pypa/gh-action-pypi-publish@release/v1
              with:
+               user: __token__
+               password: ${{ secrets.PYPI_TOKEN }}
                packages-dir: dist/
                repository-url: https://test.pypi.org/legacy/
                skip-existing: true
