--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,10 +1,15 @@
 name: Upload Python Package
 
 on:
+  push:
+    branches:
+      - master
+  
   pull_request:
     branches:
       - master
 
+    
 permissions:
   contents: read
 jobs:
