--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -1,10 +1,6 @@
 name: release-publish
 
 on:
-  push:
-    branches:
-      - master
-  
   pull_request:
     branches:
       - master
@@ -24,10 +20,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
       # 构建和发布
-      - name: Build and publish
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      - name: Build
         run: |
           python setup.py sdist bdist_wheel
           ls dist/
